--- a/css/styles.css
+++ b/css/styles.css
@@ -4,3 +4,11 @@ h1 {
 	color: #008468;
 
 }
+
+body {
+	font-family: Helvetica;
+	font-size: 10px;
+	color: #008468;
+	background-color: black;
+
+}
