--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,16 @@
 h1 {
 	font-family: Helvetica;
-	font-size: 20px;
+	font-size: 50px;
 	color: #008468;
+	position: center;
 
 }
 
 container {
 	font-family: Helvetica;
-	font-size: 10px;
+	font-size: 20px;
 	color: #008468;
 	background-color: black;
+	position: center;
 
 }
