--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,20 @@
 h1 {
 	font-family: Helvetica;
 	font-size: 50px;
-	color: #008468;
+	color: #6eb69b;
 	position: center;
 	
 
 }
 
 body {
-	background-color: #f1de7d;
+	background-color: #8b89a2;
 }
 
 #container {
 	font-family: Helvetica;
 	font-size: 20px;
-	color: #008468;
+	color: #6eb69b;
 	position: center;
 
 	}
