--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 h1 {
 	font-family: Helvetica;
 	font-size: 50px;
-	color: #6eb69b;
+	color: #f9c400;
 	position: center;
 	
 
@@ -14,7 +14,7 @@ body {
 #container {
 	font-family: Helvetica;
 	font-size: 20px;
-	color: #6eb69b;
+	color: #f9c400;
 	position: center;
 
 	}
